--- a/Assignments/A08_TimeSeries.Rmd
+++ b/Assignments/A08_TimeSeries.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 8: Time Series Analysis"
-author: "Student Name"
+author: "Yang Wang"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -29,9 +29,30 @@ The completed exercise is due on Tuesday, March 3 at 1:00 pm.
 * Import the ten datasets from the Ozone_TimeSeries folder in the Raw data folder. These contain ozone concentrations at Garinger High School in North Carolina from 2010-2019 (the EPA air database only allows downloads for one year at a time). Call these GaringerOzone201*, with the star filled in with the appropriate year in each of ten cases.
 
 ```{r, message = FALSE}
+getwd()
+library(tidyverse)
+library(lubridate)
+library(zoo)
+library(trend)
 
 
+mytheme <- theme_classic(base_size = 14) +
+  theme(axis.text = element_text(color = "black"), 
+        legend.position = "right")
+theme_set(mytheme)
+
+GaringerOzone2010<- read.csv("./Data/Raw/Ozone_TimeSeries/EPAair_O3_GaringerNC2010_raw.csv")
+GaringerOzone2011<- read.csv("./Data/Raw/Ozone_TimeSeries/EPAair_O3_GaringerNC2011_raw.csv")
+GaringerOzone2012<- read.csv("./Data/Raw/Ozone_TimeSeries/EPAair_O3_GaringerNC2012_raw.csv")
+GaringerOzone2013<- read.csv("./Data/Raw/Ozone_TimeSeries/EPAair_O3_GaringerNC2013_raw.csv")
+GaringerOzone2014<- read.csv("./Data/Raw/Ozone_TimeSeries/EPAair_O3_GaringerNC2014_raw.csv")
+GaringerOzone2015<- read.csv("./Data/Raw/Ozone_TimeSeries/EPAair_O3_GaringerNC2015_raw.csv")
+GaringerOzone2016<- read.csv("./Data/Raw/Ozone_TimeSeries/EPAair_O3_GaringerNC2016_raw.csv")
+GaringerOzone2017<- read.csv("./Data/Raw/Ozone_TimeSeries/EPAair_O3_GaringerNC2017_raw.csv")
+GaringerOzone2018<- read.csv("./Data/Raw/Ozone_TimeSeries/EPAair_O3_GaringerNC2018_raw.csv")
+GaringerOzone2019<- read.csv("./Data/Raw/Ozone_TimeSeries/EPAair_O3_GaringerNC2019_raw.csv")
 ```
+
 
 ## Wrangle
 
@@ -47,18 +68,28 @@ The completed exercise is due on Tuesday, March 3 at 1:00 pm.
 
 ```{r}
 # 2 
+GaringerOzone <- rbind(GaringerOzone2010,GaringerOzone2011,GaringerOzone2012,GaringerOzone2013,GaringerOzone2014,GaringerOzone2015,GaringerOzone2016,GaringerOzone2017,GaringerOzone2018,GaringerOzone2019)
 
 
 # 3
-
+GaringerOzone$Date <- as.Date(GaringerOzone$Date, format = "%m/%d/%Y")
 
 # 4
 
+Ozone <-
+  GaringerOzone%>%
+select(Date, Daily.Max.8.hour.Ozone.Concentration,DAILY_AQI_VALUE)
+
+
 
 # 5
+Days <- as.data.frame(seq(as.Date("2010-01-01"), as.Date("2019-12-31"), "day"))
 
+names(Days)[1]<-"Date"
 
 # 6
+
+GaringerOzone<- merge(x=Days, y=Ozone, by="Date", all.x=TRUE)
 
 
 ```
@@ -68,8 +99,13 @@ The completed exercise is due on Tuesday, March 3 at 1:00 pm.
 7. Create a ggplot depicting ozone concentrations over time. In this case, we will plot actual concentrations in ppm, not AQI values. Format your axes accordingly.
 
 ```{r}
-
-
+ozone.plot <-
+ggplot(GaringerOzone, aes(x = Date, y =Daily.Max.8.hour.Ozone.Concentration)) +
+  geom_point(alpha=0.2,color="darkgreen") +
+  labs(x = "Date", y = expression("Ozone Concentration(ppm)")) +
+  ylim(0,0.12)+
+  theme(legend.spacing.x = unit(0, "cm"))
+print(ozone.plot)
 ```
 
 ## Time Series Analysis
@@ -78,7 +114,7 @@ Study question: Have ozone concentrations changed over the 2010s at this station
 
 8. Use a linear interpolation to fill in missing daily data for ozone concentration. Why didn't we use a piecewise constant or spline interpolation?
 
-> Answer: 
+> Answer: The ozone concentration from day to day are related to each other. For a any missing data, the concentration are close to the neighbor date. Spline interpolation might exaggeration the actual concentration.
 
 9. Create a new data frame called GaringerOzone.monthly that contains aggregated data: mean ozone concentrations for each month. In your pipe, you will need to first add columns for year and month to form the groupings. In a separate line of code, create a new Date column with each month-year combination being set as the first day of the month (this is for graphing purposes only)
 
@@ -86,7 +122,7 @@ Study question: Have ozone concentrations changed over the 2010s at this station
 
 11. Run a time series analysis. In this case the seasonal Mann-Kendall is most appropriate; why is this?
 
-> Answer: 
+> Answer: Because the Seasonal Mann-Kendall consider seasonality in our data.
 
 12. To figure out the slope of the trend, run the function `sea.sens.slope` on the time series dataset. 
 
@@ -94,25 +130,40 @@ Study question: Have ozone concentrations changed over the 2010s at this station
 
 ```{r}
 # 8
-
+GaringerOzone$Daily.Max.8.hour.Ozone.Concentration <- na.approx(GaringerOzone$Daily.Max.8.hour.Ozone.Concentration)
 
 # 9
+GaringerOzone.monthly <- 
+GaringerOzone%>%
+mutate(year=year(Date), month=month(Date))%>%
+group_by(year,month)%>%
+summarize(mean.ozone = mean(Daily.Max.8.hour.Ozone.Concentration))
 
-
+GaringerOzone.monthly$Date <- as.Date(paste(GaringerOzone.monthly$year, 
+                                                GaringerOzone.monthly$month, 
+                                                1, sep="-"), 
+                                          format = "%Y-%m-%d")
 # 10
-
+GaringerOzone.monthly.ts<-ts(GaringerOzone.monthly$mean.ozone, frequency = 12, 
+                        start = c(2010, 1, 1), end = c(2019, 12, 31))
 
 # 11
- 
-
+GaringerOzone.trend <- smk.test(GaringerOzone.monthly.ts)
+GaringerOzone.trend
+summary(GaringerOzone.trend)
 # 12
-
+sea.sens.slope(GaringerOzone.monthly.ts)
 
 # 13
-
+GaringerOzone.plot <-
+ggplot(GaringerOzone.monthly, aes(x = Date, y = mean.ozone)) +
+  geom_point(alpha=0.5, color=("darkgreen")) +
+  geom_line()+
+  labs(x = "Date", y = expression("Ozone Concentration(ppm)")) 
+print(GaringerOzone.plot)
 
 ```
 
 14. To accompany your graph, summarize your results in context of the research question. Include output from the statistical test in parentheses at the end of your sentence. Feel free to use multiple sentences in your interpretation.
 
-> Answer: 
+> Answer: The ozone concentraion at Garinger school does not show significant change from 2010 to 2019(SMK, Z=-1.963 , p=0.04965)
