--- a/Lessons/sf-lesson-20200303/sf_lesson_student.Rmd
+++ b/Lessons/sf-lesson-20200303/sf_lesson_student.Rmd
@@ -48,9 +48,12 @@ library("tidyr")
 library("ggplot2")
 library("purrr")
 # some spatial data packages
+#install.packages("sf")
 library("sf")
+#install.packages("ggmap")
 library("ggmap")
 # some other packages
+#install.packages("here")
 library("here")
 ```
 
@@ -81,7 +84,7 @@ here()
 
 # use here to generate a data path
 # here("directory1", "directory2", "...", "file.extension")
-here("data", "tabular_data", "conterm_basinid.txt")
+here("data", "tabular_data", "conterm_basinid.txt")# go to data, tabular, find conterm and generate the file path to it.
 # for mac: [1] "/User/.../sf-lesson/data/tabular_data/conterm_basinid.txt"
 # for windows: [1] "C:\\...\sf-lesson\data\tabular_data\conterm_basinid.txt"
 
@@ -279,9 +282,9 @@ I like to always save a copy of the raw data in my R session and rename all new 
 
 ```{r activity.load.data}
 # add your code here
-gages_raw <- 
-southeast_state_bounds_raw <- 
-my_tabular_data_raw <- 
+gages_raw <- st_read(here("data", "spatial_data", "gagesII_9322_sept30_2011.shp"))
+southeast_state_bounds_raw <- st_read(here("data", "spatial_data", "southeast_state_bounds.shp"))
+my_tabular_data_raw <- read.csv(here("data", "tabular_data","conterm_climate.txt"))
 
 # red warning text is telling you how the data is being parsed
 ```
@@ -305,6 +308,10 @@ Use base R commands to answer the following questions (for basins_nf_seplains_ra
 
 # add your code here
 
+class(basins_nf_seplains_raw)
+head(basins_nf_seplains_raw)
+dim(basins_nf_seplains_raw)
+attributes(basins_nf_seplains_raw)
 # bonus, add your code here
 ```
 
@@ -325,6 +332,9 @@ Use st_crs() to look at the CRSs of the spatial data you have loaded up so far. 
 
 ```{r activity.check.out.data.again}
 # add your code here
+st_crs(basins_nf_seplains_raw)
+st_crs(gages_raw)
+st_crs(southeast_state_bounds_raw)
 
 # first two will not have EPSG code but have proj4 string (i.e., "+proj=aea +lat_1=29.5 +lat_2=45.5 +lat_0=23 +lon_0=-96 +x_0=0 +y_0=0 +datum=NAD83 +units=m +no_defs")
 
@@ -371,11 +381,17 @@ Last, check the CRSs of each.
 ```{r activity.setting.projecting}
 # define proj4 string and EPSG code
 # add your code here
-my_proj4 <- 
-my_epsg <- 
+my_proj4 <- "+proj=aea +lat_1=29.5 +lat_2=45.5 +lat_0=23 +lon_0=-96 +x_0=0 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs"
+my_epsg <- 5070
 
 # setting projections
+st_crs(southeast_state_bounds_raw)<- my_proj4
+st_crs(southeast_state_bounds_raw)<- my_epsg
+st_crs(southeast_state_bounds_raw)
+
+
 # set the proj4 string first and then set the EPSG code (because proj4 will over-ride EPSG if you set EPSG first)
+
 # add your code here
 # basins
 basins_nf_seplains <- basins_nf_seplains_raw
@@ -477,6 +493,7 @@ southeast_state_bounds_geometry <- st_geometry(southeast_state_bounds)
 
 # tabular data is dropped
 head(southeast_state_bounds_geometry)
+
 
 # notice the class is different now
 class(southeast_state_bounds_geometry)
