--- a/Lessons/18_CraftingReports.Rmd
+++ b/Lessons/18_CraftingReports.Rmd
@@ -29,16 +29,26 @@ A handy cheat sheet for R markdown can be found [here](https://www.rstudio.com/w
 
 ## WHY R MARKDOWN?
 
-<Fill in our discussion below with bullet points. Use italics and bold for emphasis (hint: use the cheat sheets to figure out how to make bold and italic text).>
+<Fill in our discussion below with bullet points. Use italics and bold for emphasis (hint: use the cheat sheets to figure out how to make bold and italic text)>
+
+**bold*
+
 
 ## TEXT EDITING CHALLENGE
 
 Create a table below that details the example datasets we have been using in class. The first column should contain the names of the datasets and the second column should include some relevant information about the datasets. (Hint: use the cheat sheets to figure out how to make a table in Rmd)
 
+Table Header | Second Header
+-------------| -------------
+Table Cell   | Cell 2
+Cell 3       | Cell 4 
 
 ## R CHUNK EDITING CHALLENGE
 ### Installing packages
 Create an R chunk below that installs the package `knitr`. Instead of commenting out the code, customize the chunk options such that the code is not evaluated (i.e., not run). 
+```{r,eval=FALSE}
+install.packages(knitr)
+```
 
 
 ### Setup
@@ -47,6 +57,11 @@ Create an R chunk below called "setup" that checks your working directory, loads
 Load the NTL-LTER_Lake_Nutrients_Raw dataset, display the head of the dataset, and set the date column to a date format.
 
 Customize the chunk options such that the code is run but is not displayed in the final document.
+
+```{r， echo=FALSE}
+b=2+3
+b
+```
 
 
 ### Data Exploration, Wrangling, and Visualization
